Updated DESCRIPTION file to edit errors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,10 @@
 Package: FARS
 Type: Package
-Title: Analyze Fatality Data from the US National Highway Traffic 
-Safety Administration's Fatality Analysis Reporting System
+Title: Analyze Fatality Data from the US National Highway Traffic Safety Administration's Fatality Analysis Reporting System
 Version: 0.1.0
 Author: Coursera
 Maintainer: Swetha Garimalla <swetha.garimalla@gatech.edu>
-Description: This package takes yearly (and monthly) accident data from the FARS system and analyzes the data and 
-allows the user to map the fatality data. 
+Description: This package takes yearly (and monthly) accident data from the FARS system and analyzes the data and allows the user to map the fatality data. 
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
