--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,7 @@
 exportPattern("^[[:alpha:]]+")
+export(fars_map_state)
+export(fars_read)
+export(fars_read_years)
+export(fars_summarize_years)
+export(make_filename)
+importFrom(magrittr,"%>%")
