--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,16 +5,13 @@ export(fars_read)
 export(fars_read_years)
 export(fars_summarize_years)
 export(make_filename)
-import(dplyr)
-import(filter)
-import(graphics)
-import(map)
-import(maps)
-import(points)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,summarize)
 importFrom(dplyr,tbl_df)
+importFrom(graphics,points)
+importFrom(maps,map)
 importFrom(readr,read_csv)
 importFrom(tidyr,spread)
